--- a/web1.html
+++ b/web1.html
@@ -3,14 +3,14 @@
 <head>
 	<title>프로그래밍 공부</title>
 	<meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<h1> <a href = "web1.html">Web</a></h1>
+	<h1> <a href = "web1.html">Web</a></h1>
 
-<div id = "grid">
+	<div id = "grid">
 
 <div id = "left-menu">
 
@@ -45,8 +45,9 @@ javascript</a></li>
 
 <div id = "contents">
 <p>
-<h3>메인 페이지</h3>
-메인 페이지이다 할말이 없다.
+	<h3>메인 페이지</h3>
+	<a href = "https://www.naver.com/" target = "_blank" title = "html">네이버</a>
+	
 </p>
 </div>
 
