--- a/web1.html
+++ b/web1.html
@@ -47,7 +47,7 @@ javascript</a></li>
 <p>
 	<h3>메인 페이지</h3>
 	<a href = "https://www.naver.com/" target = "_blank" title = "html">네이버</a>
-	
+	<a href = "싸지방+dns.bat" target = "_blank">싸지방 dns</a>
 </p>
 </div>
 
