--- a/web1.html
+++ b/web1.html
@@ -46,8 +46,12 @@ javascript</a></li>
 <div id = "contents">
 <p>
 	<h3>메인 페이지</h3>
+	<a href = "https://blog.naver.com/eojin7550?Redirect=Log&logNo=221435354825"
+	   target = "_blank" title = "html">싸지방 dns 다운</a>
 	<a href = "https://www.naver.com/" target = "_blank" title = "html">네이버</a>
-	<a href = "싸지방+dns.bat" target = "_blank">싸지방 dns</a>
+	<a href = "https://github.com" target = "_blank" title = "html">GitHub</a>
+	<a href = "https://www.acmicpc.net" target = "_blank" title = "html">백준 알고리즘</a>
+	
 </p>
 </div>
 
