--- a/my-JavaScript.html
+++ b/my-JavaScript.html
@@ -1,69 +1,71 @@
 <!doctyoe html>
 <html>
-<head>
-	<title>JavaScript 공부내용</title>
-	<meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
-</head>
+	<head>
+		<title>JavaScript 공부내용</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	
+	<body>
+		
+	<h1> <a href = "web1.html">Web</a></h1>
 
-<body>
-<h1> <a href = "web1.html">Web</a></h1>
+		<div id = "grid">
+			<div id = "left-menu">
+				<div id = "my-study">
+					<h4>내가 정리한 것들</h4>
+					<ol>
+						<li> <a href = "css.html">
+						 html</a></li>
+						<li> <a href = "my-css.html">
+						css</a></li>
+						<li> <a href = "my-JavaScript.html">
+						javascript</a></li>
+					</ol>
+				</div>
 
-<div id = "grid">
+				<div id = "site">
+				<h4>참고 사이트</h4>
+				<ol>
+					<li> <a href = "https://opentutorials.org/course/3084" target = "_blank" title = "html">
+					html</a></li>
+					<li> <a href = "https://opentutorials.org/course/3086" target = "_blank" title = "css">
+					css</a></li>
+					<li> <a href = "https://opentutorials.org/course/3085" target = "_blank" title = "JavaScript">
+					javascript</a></li>
+				</ol>
 
-<div id = "left-menu">
-
-<div id = "my-study">
-<h4>내가 정리한 것들</h4>
-<ol>
-<li> <a href = "css.html">
- html</a></li>
-<li> <a href = "my-css.html">
-css</a></li>
-<li> <a href = "my-JavaScript.html">
-javascript</a></li>
-</ol>
-</div>
-
-<div id = "site">
-<h4>참고 사이트</h4>
-<ol>
-<li> <a href = "https://opentutorials.org/course/3084" target = "_blank" title = "html">
-html</a></li>
-<li> <a href = "https://opentutorials.org/course/3086" target = "_blank" title = "css">
-css</a></li>
-<li> <a href = "https://opentutorials.org/course/3085" target = "_blank" title = "JavaScript">
-javascript</a></li>
-</ol>
-
-</div>
-
-</div>
-
-<div id = "contents">
-<p>
-<h3>자바 스크립트의 등장</h3>
-
-자바 스크립트 - 사용자와 상호작용<br>
-html은 정적이여서 한번 출력하면 변경되지 않음<br>
-style속성의 값은 css값이 와야한다.<br>
-
-야간모드 - 주간모드
-<input type="button" value="night" onclick="
-">
-</p>
+				</div>
 
 
-<h3>script태그란?</h3>
-script태그가 오면 그 다음 코드는 자바 스크립트이다.<br>
-
-<h3>이벤트</h3>
-<input type="button" value="hi" onclick="alert('hi')"> - 클릭하면 경고<br>
-onclick속성 값은 자바 스크립트<br>
-클릭 될때 까지 대기<br>
-<input type="text" onchange="alert('change')"> - 값이 바뀌면 경고<br>
-<input type="text" onkeydown="alert('key down!')"> - 아무 key나 입력되면 경고
-</div>
-</div>
-</body>
+			</div>
+			
+			<div id = "contents">
+				<p>
+					<h3>자바 스크립트의 등장</h3>
+					자바 스크립트 - 사용자와 상호작용<br>
+					html은 정적이여서 한번 출력하면 변경되지 않음<br>
+					style속성의 값은 css값이 와야한다.<br>
+					야간모드 - 주간모드
+					<input type="button" value="night" onclick="
+					">
+				</p>
+				<p>
+					<h3>script태그란?</h3>
+					script태그가 오면 그 다음 코드는 자바 스크립트이다.<br>
+				</p>
+				<p>
+					<h3>이벤트</h3>
+	<input type="button" value="hi" onclick="alert('hi')"> - 클릭하면 경고<br>
+	onclick속성 값은 자바 스크립트<br>
+	클릭 될때 까지 대기<br>
+	<input type="text" onchange="alert('change')"> - 값이 바뀌면 경고<br>
+	<input type="text" onkeydown="alert('key down!')"> - 아무 key나 입력되면 경고
+				</p>
+				<p>
+					<h3>데이터 타입</h3>
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
