--- a/my-JavaScript.html
+++ b/my-JavaScript.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	
-	<body>
+	<body style="background-color:black;color:white;">
 		
 	<h1> <a href = "web1.html">Web</a></h1>
 
@@ -62,9 +62,7 @@
 	<input type="text" onchange="alert('change')"> - 값이 바뀌면 경고<br>
 	<input type="text" onkeydown="alert('key down!')"> - 아무 key나 입력되면 경고
 				</p>
-				<p>
-					<h3>데이터 타입</h3>
-				</p>
+				
 			</div>
 		</div>
 	</body>
